syntax = "proto3";
package nexus;

import "google/protobuf/empty.proto";

service GitService {
    rpc ListKnownRefs(ListRefsRequest) returns (ListRefsResponse) {}
    rpc ListRefsForClone(ListRefsRequest) returns (ListRefsResponse) {}
    rpc UploadPack(UploadPackRequest) returns (UploadPackResponse) {}
    rpc ReceivePack(ReceivePackRequest) returns (google.protobuf.Empty) {}
}


message UploadPackRequest {
    string repoName = 1;
}

message UploadPackResponse {
    bytes data = 1;
}

message ReceivePackRequest {
    string repoName = 1;
    bytes data = 2;
}

message ListRefsRequest {
    string repoName = 1;
}
message ListRefsResponse {
    bytes data = 1;
}